--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "gh-pages": "^6.1.1",
     "vite": "^5.3.4"
   },
-  "homepage":"https://alexiacorach.github.io/Proyecto-Final-React/"
+  "homepage":"https://github.com/alexiacorach/Proyecto-Final-React"
 }
